--- a/test-app/app/styles/test-app.scss
+++ b/test-app/app/styles/test-app.scss
@@ -13,21 +13,21 @@
   }
 
   /* Default styles fails contrast checks */
-  .ember-power-select-placeholder {
-    /* Fix by removing default color style? => $ember-power-select-placeholder-color: #999999 !default; */
-    color: inherit;
-    opacity: 0.6; /* Fade opacity slightly as alternative to setting fixed color? */
-  }
+  // .ember-power-select-placeholder {
+  //   /* Fix by removing default color style? => $ember-power-select-placeholder-color: #999999 !default; */
+  //   color: inherit;colorcolor
+  //   opacity: 0.6;opacityopacity /* Fade opacity slightly as alternative to setting fixed color? */
+  // }
 
   /* Uses an actual input element unlike "ember-power-select-placeholder" which uses a span (Only visible when dropdown is open) */
-  .ember-power-select-search-input {
-    color: inherit;
+  // .ember-power-select-search-input {
+  //   color: inherit;colorcolor
 
-    &::placeholder {
-      color: inherit;
-      opacity: 0.6;
-    }
-  }
+  //   &::placeholder {
+  //     color: inherit;colorcolor
+  //     opacity: 0.6;opacityopacity
+  //   }
+  // }
 
   /* 
     Currently most elements inherit text color. This is likely desireable (consumers should have responsibility for 
@@ -37,6 +37,7 @@
   */
   .parent-text-color-test {
     color: pink;
+    color: darkblue;
   }
 }
 
